[tool.poetry]
name = "twilight-setup"
version = "1.0.0"
description = "Setup script for a game of Twilight Imperium"
authors = ["Bradley Sherman <sirrus233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.9.0"
pre-commit = "^2.4.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
